--- a/App_Mobile/src/pages/login/login.html
+++ b/App_Mobile/src/pages/login/login.html
@@ -33,5 +33,8 @@
       <button ion-button [navPush]="go_home" >Ingresar</button>
     </div>
   
+  <div padding>
+      <button ion-button [navPush]="go_home" >Ingresar como Visitante</button>
+    </div>
 
 </ion-content>
